--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="work-info.html">Work Info</a></li>
         </ul>
       </div>
     </div>
